--- a/web/src/main/webapp/Vendedor/gestionarProducto.xhtml
+++ b/web/src/main/webapp/Vendedor/gestionarProducto.xhtml
@@ -7,9 +7,9 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:composition template="/WEB-INF/template.xhtml">
-    <ui:define name="title">Título de la página de ejemplo</ui:define>
+    <ui:define name="title">Gestion Producto</ui:define>
     <ui:define name="content">
-        <p>Contenido de la página de ejemplo</p>
+        <p>Contenido de la página de ejemplo producto</p>
     </ui:define>
 </ui:composition>
 </html>
