--- a/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template.xhtml
@@ -4,7 +4,11 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+
+      xmlns:jsf="http://xmlns.jcp.org/jsf">
+
+
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,31 +17,70 @@
     <h:outputStylesheet name="styles.css" library="css" />
     <title>Compania |  <ui:insert name="title">Inicio</ui:insert></title>
 </h:head>
-<h:body>
+<h:body style="background-color: #badbcc">
 
-    <div id = "barra_nav" >
+    <div id = "barra_nav">
         <header>
-            <h:form style="background-color: gray">
-                <p:dock position="bottom">
-                    <p:menuitem style="margin-right: 50px" value="Gestionar Vendedores" icon="/resources/imagenes/vendedores.png"/>
-                    <p:menuitem style="margin-right: 50px" value="Gestionar Ventas" icon="/resources/imagenes/ventas.png"/>
-                    <p:menuitem style="margin-right: 50px" value="Gestionar Inventario" icon="/resources/imagenes/inventario.png"/>
-                    <p:menuitem style="margin-right: 50px" value="Realizar Venta" icon="/resources/imagenes/vender.png"/>
-                    <p:menuitem value="Productos" icon="/resources/imagenes/producto.png"/>
-
-                </p:dock>
+            <h:form >
+                <div class="px-3 py-2 text-bg-dark" style="background-color: #5c636a">
+                    <div class="container">
+                        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a href="/Vendedor/gestionarVendedor.xhtml" class="nav-link text-white">
+                                        VENDEDORES
+                                    </a>
+                                </li>
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a href="/Vendedor/gestionarVenta.xhtml" class="nav-link text-white">
+                                        REALIZAR VENTA
+                                    </a>
+                                </li>
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a href="/Vendedor/gestionarInventario.xhtml" class="nav-link text-white">
+                                        GESTIONAR INVENTARIO
+                                    </a>
+                                </li>
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a href="/Vendedor/gestionarFactura.xhtml" class="nav-link text-white">
+                                        FACTURAS
+                                    </a>
+                                </li>
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a href="/Vendedor/gestionarProducto.xhtml" class="nav-link text-white">
+                                        PRODUCTOS
+                                    </a>
+                                </li>
+                                <li style="margin-left: 200px">
+                                    <div>
+                                        <h:form rendered="#{seguridadBean.autenticado}">
+                                            <p:outputLabel value="Hola, #{seguridadBean.vendedor.nombre}" styleClass="me-3"/>
+                                            <p:commandButton value="Cerrar Sesion" action="#{seguridadBean.cerrarSesion()}" styleClass="ui-button-outlined ui-button-text-icon-primary me-3"/>
+                                        </h:form>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </h:form>
         </header>
     </div>
 
     <div id="header">
-        <ui:insert name="header">Encabezado</ui:insert>
+        <ui:insert name="header">
+
+        </ui:insert>
     </div>
     <div id="content">
-        <ui:insert name="content">Contenido</ui:insert>
+        <ui:insert name="content">
+
+        </ui:insert>
     </div>
     <div id="footer">
-        <ui:insert name="footer">Pie de página</ui:insert>
+        <ui:insert name="footer">
+
+        </ui:insert>
     </div>
 </h:body>
 </html>
