--- a/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
+++ b/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
@@ -83,56 +83,123 @@
                 </p:column>
 
                 <p:column headerText="" >
-                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('registrar_vendedor').show()" update="dialogo_crear"/>
+                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('actualizar_vendedor').show()" update="dialogo_actualizar"/>
                 </p:column>
 
             </p:dataTable>
         </h:form>
 
+        <div>
+            <p:dialog id="dialogo_crear" widgetVar="registrar_vendedor" modal="true" header="#{vendedorBean.mensajeCrearEditar}" showEffect="fade">
 
-        <p:dialog id="dialogo_crear" widgetVar="registrar_vendedor" modal="true" header="#{vendedorBean.mensajeCrearEditar}" showEffect="fade">
+                <h1>REGISTRAR VENDEDOR</h1>
 
-            <h1>GESTIONAR VENDEDOR</h1>
+                <h:form>
+                    <h:panelGrid columns="3" cellpadding="5" >
+
+
+                        <p:outputLabel for="nombre_vendedor" value = "Nombre: "/>
+                        <p:inputText id="nombre_vendedor" value = "#{vendedorBean.vendedor.nombre}" required="true"/>
+                        <p:messages for="nombre_vendedor"/>
+
+                        <p:outputLabel for="apellido_vendedor" value = "Apellido: "/>
+                        <p:inputText id="apellido_vendedor" value = "#{vendedorBean.vendedor.apellido}" required="true"/>
+                        <p:messages for="apellido_vendedor"/>
+
+                        <p:outputLabel for="correo_vendedor" value = "Correo: "/>
+                        <p:inputText id="correo_vendedor" value = "#{vendedorBean.vendedor.correo}" required="true"/>
+                        <p:messages for="correo_vendedor"/>
+
+                        <p:outputLabel for="contrasena_vendedor" value = "Contrasena: "/>
+                        <p:inputText id="contrasena_vendedor" value = "#{vendedorBean.vendedor.contrasena}" required="true"/>
+                        <p:messages for="contrasena_vendedor"/>
+
+                        <p:outputLabel for="salario_vendedor" value = "Salario: "/>
+                        <p:inputText id="salario_vendedor" value = "#{vendedorBean.vendedor.salario}" required="true"/>
+                        <p:messages for="salario_vendedor"/>
+
+                        <p:outputLabel for="telefono_vendedor" value = "telefono: "/>
+                        <p:inputText id="telefono_vendedor" value = "#{vendedorBean.vendedor.telefono}" required="true"/>
+                        <p:messages for="telefono_vendedor"/>
+
+                        <p:outputLabel style="text-align: left" for="ciudad_vendedor" value = "Ciudad: "/>
+                        <p:selectOneMenu id="ciudad_vendedor" value="#{vendedorBean.direccion.ciudad}" converter="#{ciudadConverter}">
+                            <f:selectItem itemLabel="Seleccione la ciudad" noSelectionOption="true" itemValue="#{null}"/>
+                            <f:selectItems value="#{vendedorBean.ciudades}" var="ciudad" itemLabel="#{ciudad.nombre}" itemValue="#{ciudad}"/>
+                        </p:selectOneMenu>
+
+                        <hr></hr>
+                        <p:outputLabel for="direccion_vendedor" value = "Direccion: "/>
+                        <p:inputText id="direccion_vendedor" value = "#{vendedorBean.direccion.direccion}" required="true"/>
+                        <p:messages for="direccion_vendedor"/>
+
+                        <p:outputLabel for="tipo_direccion" value = "Tipo Direccion: "/>
+                        <p:inputText id="tipo_direccion" value = "#{vendedorBean.direccion.tipo}" required="true"/>
+                        <p:messages for="tipo_direccion"/>
+
+
+                    </h:panelGrid>
+                    <p:commandButton value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
+                    <p:growl for="mensaje_registro_vendedor" showDetail="true"/>
+
+                </h:form>
+            </p:dialog>
+        </div>
+
+
+
+        <!-- _______________________________________ACTUALIZAR_________________________________________ -->
+
+
+
+
+        <p:dialog id="dialogo_actualizar" widgetVar="actualizar_vendedor" modal="true" header="#{vendedorBean.mensajeCrearEditar}" showEffect="fade">
+
+            <h1>ACTUALIZAR VENDEDOR</h1>
 
             <h:form>
                 <h:panelGrid columns="3" cellpadding="5" >
 
 
-                    <p:outputLabel for="codigo_vendedor" value = "Codigo: "/>
-                    <p:inputText id="codigo_vendedor" value = "#{vendedorBean.vendedor.codigo}" required="true"/>
-                    <p:messages for="codigo_vendedor"/>
+                    <p:outputLabel for="nombre_vendedorA" value = "Nombre: "/>
+                    <p:inputText id="nombre_vendedorA" value = "#{vendedorBean.vendedor.nombre}" required="true"/>
+                    <p:messages for="nombre_vendedorA"/>
 
-                    <p:outputLabel for="nombre_vendedor" value = "Nombre: "/>
-                    <p:inputText id="nombre_vendedor" value = "#{vendedorBean.vendedor.nombre}" required="true"/>
-                    <p:messages for="nombre_vendedor"/>
+                    <p:outputLabel for="apellido_vendedorA" value = "Apellido: "/>
+                    <p:inputText id="apellido_vendedorA" value = "#{vendedorBean.vendedor.apellido}" required="true"/>
+                    <p:messages for="apellido_vendedorA"/>
 
-                    <p:outputLabel for="apellido_vendedor" value = "Apellido: "/>
-                    <p:inputText id="apellido_vendedor" value = "#{vendedorBean.vendedor.apellido}" required="true"/>
-                    <p:messages for="apellido_vendedor"/>
+                    <p:outputLabel for="correo_vendedorA" value = "Correo: "/>
+                    <p:inputText id="correo_vendedorA" value = "#{vendedorBean.vendedor.correo}" required="true"/>
+                    <p:messages for="correo_vendedorA"/>
 
-                    <p:outputLabel for="correo_vendedor" value = "Correo: "/>
-                    <p:inputText id="correo_vendedor" value = "#{vendedorBean.vendedor.correo}" required="true"/>
-                    <p:messages for="correo_vendedor"/>
+                    <p:outputLabel for="contrasena_vendedorA" value = "Contrasena: "/>
+                    <p:inputText id="contrasena_vendedorA" value = "#{vendedorBean.vendedor.contrasena}" required="true"/>
+                    <p:messages for="contrasena_vendedorA"/>
 
-                    <p:outputLabel for="salario_vendedor" value = "Salario: "/>
-                    <p:inputText id="salario_vendedor" value = "#{vendedorBean.vendedor.salario}" required="true"/>
-                    <p:messages for="salario_vendedor"/>
+                    <p:outputLabel for="salario_vendedorA" value = "Salario: "/>
+                    <p:inputText id="salario_vendedorA" value = "#{vendedorBean.vendedor.salario}" required="true"/>
+                    <p:messages for="salario_vendedorA"/>
 
-                    <p:outputLabel for="telefono_vendedor" value = "telefono: "/>
-                    <p:inputText id="telefono_vendedor" value = "#{vendedorBean.vendedor.telefono}" required="true"/>
-                    <p:messages for="telefono_vendedor"/>
+                    <p:outputLabel for="telefono_vendedorA" value = "telefono: "/>
+                    <p:inputText id="telefono_vendedorA" value = "#{vendedorBean.vendedor.telefono}" required="true"/>
+                    <p:messages for="telefono_vendedorA"/>
 
-                    <p:outputLabel for="ciudad_vendedor" value = "Ciudad: "/>
-                    <p:inputText id="ciudad_vendedor" value = "#{vendedorBean.vendedor.direccion.ciudad}" required="true"/>
-                    <p:messages for="ciudad_vendedor"/>
 
-                    <p:outputLabel for="direccion_vendedor" value = "Direccion: "/>
-                    <p:inputText id="direccion_vendedor" value = "#{vendedorBean.vendedor.direccion.direccion}" required="true"/>
-                    <p:messages for="direccion_vendedor"/>
+                    <p:outputLabel style="text-align: left" for="ciudad_vendedorA" value = "Ciudad: "/>
+                    <p:selectOneMenu id="ciudad_vendedorA" value="#{vendedorBean.vendedor.direccion.ciudad}" converter="#{ciudadConverter}">
+                        <f:selectItem itemLabel="Seleccione la ciudad" noSelectionOption="true" itemValue="#{null}"/>
+                        <f:selectItems value="#{vendedorBean.ciudades}" var="ciudad" itemLabel="#{ciudad.nombre}" itemValue="#{ciudad}"/>
+                    </p:selectOneMenu>
 
-                    <p:outputLabel for="tipo_direccion" value = "Tipo Direccion: "/>
-                    <p:inputText id="tipo_direccion" value = "#{vendedorBean.vendedor.direccion.tipo}" required="true"/>
-                    <p:messages for="tipo_direccion"/>
+                    <hr></hr>
+                    <p:outputLabel for="direccion_vendedorA" value = "Direccion: "/>
+                    <p:inputText id="direccion_vendedorA" value = "#{vendedorBean.vendedor.direccion.direccion}" required="true"/>
+                    <p:messages for="direccion_vendedorA"/>
+
+                    <p:outputLabel for="tipo_direccionA" value = "Tipo Direccion: "/>
+                    <p:inputText id="tipo_direccionA" value = "#{vendedorBean.vendedor.direccion.tipo}" required="true"/>
+                    <p:messages for="tipo_direccionA"/>
 
 
                 </h:panelGrid>
