--- a/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template.xhtml
@@ -17,7 +17,7 @@
     <h:outputStylesheet name="styles.css" library="css" />
     <title>Compania |  <ui:insert name="title">Inicio</ui:insert></title>
 </h:head>
-<h:body style="background-color: #badbcc">
+<h:body style="background-color: #2c3034">
 
     <div id = "barra_nav">
         <header>
@@ -27,27 +27,27 @@
                         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a href="/Vendedor/gestionarVendedor.xhtml" class="nav-link text-white">
+                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarVendedor.xhtml" class="nav-link">
                                         VENDEDORES
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a href="/Vendedor/gestionarVenta.xhtml" class="nav-link text-white">
+                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarVenta.xhtml" class="nav-link">
                                         REALIZAR VENTA
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a href="/Vendedor/gestionarInventario.xhtml" class="nav-link text-white">
+                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarInventario.xhtml" class="nav-link ">
                                         GESTIONAR INVENTARIO
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a href="/Vendedor/gestionarFactura.xhtml" class="nav-link text-white">
+                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarFactura.xhtml" class="nav-link">
                                         FACTURAS
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a href="/Vendedor/gestionarProducto.xhtml" class="nav-link text-white">
+                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarProducto.xhtml" class="nav-link">
                                         PRODUCTOS
                                     </a>
                                 </li>
