--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -11,23 +11,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Compania Login</title>
 </h:head>
-<h:body>
-
-    <p:panel header="LOGIN VENDEDOR">
-        <h:form rendered="#{!seguridadBean.autenticado}">
-            <h:panelGrid columns="3" cellpadding="5">
-                <p:outputLabel for="email_login" value="Email:" />
-                <p:inputText id="email_login" value="#{seguridadBean.email}" required="true" />
-                <p:message for="email_login" />
-                <p:outputLabel for="password_login" value="Password:" />
-                <p:password id="password_login" value="#{seguridadBean.password}" required="true"
-                />
-                <p:message for="password_login" />
-            </h:panelGrid>
-            <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion()}"
-                             styleClass="mt-4" update="@form" icon="pi pi-sign-in" iconPos="left" />
-            <p:growl for="login-bean" showDetail="true" />
-        </h:form>
-    </p:panel>
+<h:body style="background-color: #2c3034">
+    <div>
+        <p:panel header="LOGIN VENDEDOR">
+            <h:form  rendered="#{!seguridadBean.autenticado}">
+                <h:panelGrid columns="3" cellpadding="5">
+                    <p:outputLabel for="email_login" value="Email:" />
+                    <p:inputText id="email_login" value="#{seguridadBean.email}" required="true" />
+                    <p:message for="email_login" />
+                    <p:outputLabel for="password_login" value="Password:" />
+                    <p:password id="password_login" value="#{seguridadBean.password}" required="true"
+                    />
+                    <p:message for="password_login" />
+                </h:panelGrid>
+                <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion()}"
+                                 styleClass="mt-4" update="@form" icon="pi pi-sign-in" iconPos="left" />
+                <p:growl for="login-bean" showDetail="true" />
+            </h:form>
+        </p:panel>
+    </div>
 </h:body>
 </html>
