--- a/web/src/main/webapp/menuVendedor.xhtml
+++ b/web/src/main/webapp/menuVendedor.xhtml
@@ -9,7 +9,8 @@
 <ui:composition template="/WEB-INF/template.xhtml">
     <ui:define name="title">INICIO</ui:define>
     <ui:define name="content">
-        <p>Contenido de la página de ejemplo INICIO</p>
+        <h1 style="color: #cc2658">Contenido de la página de ejemplo INICIO</h1>
+
     </ui:define>
 </ui:composition>
 
