--- a/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
+++ b/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
@@ -9,10 +9,6 @@
 <ui:composition template="/WEB-INF/template.xhtml">
     <ui:define name="title">Gestion Vendedor</ui:define>
     <ui:define name="content">
-        <p>Contenido de la página de ejemplo vendedor</p>
-
-
-
 
         <h:form id="crud_vendedor">
 
@@ -82,9 +78,19 @@
                     <h:outputText value="#{vendedor.estado_afiliacion}"/>
                 </p:column>
 
-                <p:column headerText="" >
-                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('actualizar_vendedor').show()" update="dialogo_actualizar"/>
+                <p:column headerText="Nivel Afiliacion" >
+                    <h:outputText value="#{vendedor.afiliacion.nivel}"/>
                 </p:column>
+
+                <p:column headerText="UPDATE" >
+                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" style="background-color: forestgreen" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('actualizar_vendedor').show()" update="dialogo_actualizar"/>
+                </p:column>
+
+                <p:column headerText="AFILIAR" >
+                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-check" style="background-color: darkcyan;" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('afiliar_vendedor').show()" update="dialogo_afiliar"/>
+                </p:column>
+
+
 
             </p:dataTable>
         </h:form>
@@ -204,6 +210,60 @@
 
                 </h:panelGrid>
                 <p:commandButton value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
+                <p:growl for="mensaje_registro_vendedor" showDetail="true"/>
+
+            </h:form>
+        </p:dialog>
+
+
+
+
+
+
+
+
+
+        <!-- _______________________________________AFILIACIONES_________________________________________ -->
+
+
+
+
+        <p:dialog id="dialogo_afiliar" widgetVar="afiliar_vendedor" modal="true" header="#{vendedorBean.mensajeCrearEditar}" showEffect="fade">
+
+            <h1>AFILIAR VENDEDOR</h1>
+
+            <h:form>
+                <h:panelGrid columns="3" cellpadding="4" >
+
+
+                    <p:outputLabel for="nombre_vendedorF" value = "Nombre: "/>
+                    <p:inputText id="nombre_vendedorF" value = "#{vendedorBean.vendedor.nombre}" required="true" readonly="true"/>
+                    <p:messages for="nombre_vendedorF"/>
+
+                    <p:outputLabel for="apellido_vendedorF" value = "Apellido: "/>
+                    <p:inputText id="apellido_vendedorF" value = "#{vendedorBean.vendedor.apellido}" required="true" readonly="true"/>
+                    <p:messages for="apellido_vendedorF"/>
+
+                    <p:outputLabel for="telefono_vendedorF" value = "telefono: "/>
+                    <p:inputText id="telefono_vendedorF" value = "#{vendedorBean.vendedor.telefono}" required="true" readonly="true"/>
+                    <p:messages for="telefono_vendedorF"/>
+
+
+                    <p:outputLabel style="text-align: left" for="afiliacion_vendedorF" value = "Nivel Afiliacion: "/>
+                    <p:selectOneMenu id="afiliacion_vendedorF" value="#{vendedorBean.vendedor.afiliacion}" converter="#{afiliacionConverter}">
+                        <f:selectItem itemLabel="Seleccione el nivel" noSelectionOption="true" itemValue="#{null}"/>
+                        <f:selectItems value="#{vendedorBean.afiliaciones}" var="afiliacion" itemLabel="#{afiliacion.nivel}" itemValue="#{afiliacion}"/>
+                    </p:selectOneMenu>
+
+                    <hr></hr>
+                    <p:outputLabel style="text-align: left" for="estadoafiliacion_vendedorF" value = "Estado Afiliacion: "/>
+                    <p:selectOneMenu id="estadoafiliacion_vendedorF" value="#{vendedorBean.vendedor.estado_afiliacion}" required="true">
+                        <f:selectItem itemLabel="true" itemValue="true" />
+                        <f:selectItem itemLabel="false" itemValue="false" />
+                    </p:selectOneMenu>
+
+                </h:panelGrid>
+                <p:commandButton value="AFILIAR VENDEDOR" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
                 <p:growl for="mensaje_registro_vendedor" showDetail="true"/>
 
             </h:form>
