--- a/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template.xhtml
@@ -17,43 +17,48 @@
     <h:outputStylesheet name="styles.css" library="css" />
     <title>Compania |  <ui:insert name="title">Inicio</ui:insert></title>
 </h:head>
-<h:body style="background-color: #2c3034">
+<h:body style="background-color: #000000">
 
     <div id = "barra_nav">
         <header>
-            <h:form >
-                <div class="px-3 py-2 text-bg-dark" style="background-color: #5c636a">
+            <h:form>
+                <div class="px-3 py-2" style="background-color: #000000">
                     <div class="container">
                         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarVendedor.xhtml" class="nav-link">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarVendedor.xhtml" class="nav-link">
                                         VENDEDORES
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarVenta.xhtml" class="nav-link">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarVenta.xhtml" class="nav-link">
                                         REALIZAR VENTA
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarInventario.xhtml" class="nav-link ">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarInventario.xhtml" class="nav-link ">
                                         GESTIONAR INVENTARIO
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarFactura.xhtml" class="nav-link">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarFactura.xhtml" class="nav-link">
                                         FACTURAS
                                     </a>
                                 </li>
                                 <li jsf:rendered="#{seguridadBean.autenticado}">
-                                    <a style="color: #0dcaf0" href="/Vendedor/gestionarProducto.xhtml" class="nav-link">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarProducto.xhtml" class="nav-link">
                                         PRODUCTOS
                                     </a>
                                 </li>
+                                <li jsf:rendered="#{seguridadBean.autenticado}">
+                                    <a style="color: #00F5FF" href="/Vendedor/gestionarCliente.xhtml" class="nav-link">
+                                        CLIENTES
+                                    </a>
+                                </li>
                                 <li style="margin-top: -15px">
-                                    <h:panelGrid columns="2" style="margin-left: 100px" rendered="#{seguridadBean.autenticado}">
-                                        <p:outputLabel style="font-size: 15px;margin-top: 12px" value="Hola, #{seguridadBean.vendedor.nombre} #{seguridadBean.vendedor.apellido}" styleClass="me-3"/>
+                                    <h:panelGrid columns="2" style="margin-left: 60px" rendered="#{seguridadBean.autenticado}">
+                                        <p:outputLabel style="font-size: 15px;margin-top: 12px; color: white" value="Hola, #{seguridadBean.vendedor.nombre} #{seguridadBean.vendedor.apellido}" styleClass="me-3"/>
                                             <p:commandButton value="Cerrar Cesion" action="#{seguridadBean.cerrarSesion}"
                                                              styleClass="mt-3" update="@form" icon="pi pi-sign-in"
                                                              iconPos="left"/>
